# etf-tool

./: .gitignore  Cargo.toml
data/: invesco_etfs.xlsx  xtrackers_etfs.xlsx
examples/: load_holdings.rs
src/: etf.rs  invesco.rs  ishares.rs  lib.rs  main.rs  ui.rs  utils.rs  xtrackers.rs
