[package]
name = "etf-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
calamine = "0.26.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
quick-xml = "0.31.0"
serde_json = "1.0"

